@@ -10,7 +10,7 @@ use Socket qw(IPPROTO_TCP TCP_NODELAY);
 # Non-blocking name resolution requires Net::DNS::Native
 use constant NDN => $ENV{MOJO_NO_NDN}
   ? 0
-  : eval 'use Net::DNS::Native 0.11 (); 1';
+  : eval 'use Net::DNS::Native 0.12 (); 1';
 my $NDN = NDN ? Net::DNS::Native->new(pool => 5, extra_thread => 1) : undef;
 
 # TLS support requires IO::Socket::SSL
@@ -268,7 +268,7 @@ implements the following new ones.
   $client->connect(address => '127.0.0.1', port => 3000);
 
 Open a socket connection to a remote host. Note that non-blocking name
-resolution depends on L<Net::DNS::Native> (0.11+) and TLS support on
+resolution depends on L<Net::DNS::Native> (0.12+) and TLS support on
 L<IO::Socket::SSL> (1.84+).
 
 These options are currently available:
