@@ -173,7 +173,7 @@ file with it, and send a L</"USR2"> signal to the already running server.
 
 For better scalability (epoll, kqueue) and to provide non-blocking name
 resolution, SOCKS5 as well as TLS support, the optional modules L<EV> (4.0+),
-L<Net::DNS::Native> (0.11+), L<IO::Socket::Socks> (0.64+) and
+L<Net::DNS::Native> (0.12+), L<IO::Socket::Socks> (0.64+) and
 L<IO::Socket::SSL> (1.84+) will be used automatically if they are installed.
 Individual features can also be disabled with the C<MOJO_NO_NDN>,
 C<MOJO_NO_SOCKS> and C<MOJO_NO_TLS> environment variables.
